--- a/manifest.json
+++ b/manifest.json
@@ -22,10 +22,14 @@
     }
   ],
   "default_locale": "zh_TW",
-  "icons":
-    {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+  "icons":{
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
+  "permissions": ["storage"]
 }
