add support for work search page

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,15 @@
              "selector_to_name.js",
              "util.js",
              "content_scripts/chapter_new.js"]
+    },
+    {
+      "matches": ["*://archiveofourown.org/works/search",
+                  "*://www.archiveofourown.org/works/search"],
+      "css": ["tooo.css"],
+      "js": ["jquery.min.js",
+             "selector_to_name.js",
+             "util.js",
+             "content_scripts/search.js"]
     }
   ],
   "default_locale": "zh_TW",
