--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,15 @@
              "content_scripts/general.js"]
     },
     {
+      "matches": ["*://archiveofourown.org/users/*",
+                  "*://www.archiveofourown.org/users/*"],
+      "css": ["tooo.css"],
+      "js": ["jquery.min.js",
+             "selector_to_name.js",
+             "util.js",
+             "content_scripts/user.js"]
+    },
+    {
       "matches": ["*://archiveofourown.org/works/new",
                   "*://www.archiveofourown.org/works/new"],
       "css": ["tooo.css"],
