add browse content script on user/works and bookmarks page.

--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,11 @@
       "matches": ["*://archiveofourown.org/tags/*/works",
                   "*://www.archiveofourown.org/tags/*/works",
                   "*://archiveofourown.org/tags/*/bookmarks",
-                  "*://www.archiveofourown.org/tags/*/bookmarks"],
+                  "*://www.archiveofourown.org/tags/*/bookmarks",
+                  "*://archiveofourown.org/users/*/works",
+                  "*://www.archiveofourown.org/users/*/works",
+                  "*://archiveofourown.org/users/*/bookmarks",
+                  "*://www.archiveofourown.org/users/*/bookmarks"],
       "css": ["tooo.css"],
       "js": ["jquery.min.js",
              "selector_to_name.js",
